# nautos

./: .env.example  .gitignore  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Makefile  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pnpm-workspace.yaml
apps/web/: Dockerfile  components.json  next.config.ts  package.json  tsconfig.json
apps/web/__tests__/: middleware.test.ts
apps/web/public/: manifest.json  sw.js
apps/web/src/: middleware.ts
apps/worker/: Dockerfile
apps/worker/app/: celery_app.py  config.py
db/migrations/: 001_initial_schema.sql
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  STRUCTURE.md
infra/: docker-compose.dev.yml  docker-compose.yml
nautos-app/: Dockerfile  package.json  pnpm-lock.yaml
nautos-app/__tests__/lib/: auth.test.ts
nautos-app/scripts/: generate_boat_webp.py
nautos-app/src/: middleware.test.ts  middleware.ts
nautos-app/src/app/: globals.css  layout.tsx  page.tsx
nautos-app/src/lib/: auth.test.ts  auth.ts  rate-limit.test.ts  (+4 more)
nautos-worker/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
nautos-worker/app/: celery_app.py  config.py  main.py
nautos-worker/tests/: test_privacy.py
services/frontend/: package.json
services/worker/: pyproject.toml
services/worker/app/: main.py
services/worker/app/models/: schemas.py
services/worker/app/routes/: extraction.py
services/worker/app/services/: privacy.py
services/worker/app/services/ingestion/: ocr.py
services/worker/app/services/retrieval/: llm.py  vectordb.py
shared/migrations/: 001_initial_schema.sql  002_hnsw_indexes.sql
(+122 files in other folders)
