[project]
name = "nautos-worker"
version = "0.1.0"
description = "NAUTOS AI - Python AI/ML Worker (OCR, Embeddings, RAG)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "celery[redis]>=5.4.0",
    "anthropic>=0.52.0",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
    "openpyxl>=3.1.0",
    "voyageai>=0.3.0",
    "azure-ai-documentintelligence>=1.0.0",
    "elasticsearch>=8.17.0,<9.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.0",
    "boto3>=1.35.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
